update SummarizeRoute to pass the uiStates flow from SummarizeViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_go">Go</string>
     <string name="summarize_label">Enter yours prompt</string>
     <string name="summarize_hint">Enter text or a URL to summarize</string>
+    <string name="loading_text">Please wait for answer…</string>
 </resources>
